--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-<h1>Codeprendo</h1>
+<p><img src="https://photos.google.com/search/_tra_/photo/AF1QipPiKTiZNAWENvi5xVYmZMeMGRGWhJQyfl0BqguS" alt="" /></p>
+<!-- ######## This is a comment, visible only in the source editor  ######## -->
+<h1 style="color: #4485b8; text-align: right;"><span style="color: #000000;">Codeprendo</span><span style="color: #000000;"></span></h1>
+<p><span style="color: #000000;"></span></p>
+<p><span style="color: #000000;"><img src="https://photos.app.goo.gl/2qaoELTSiGydjfhPA" alt="Timeline" width="500" height="500" /></span></p>
+<p></p>
+<p><strong style="color: #000;">Basic usage:</strong> Paste your documents in the visual editor on the left or your HTML code in the source editor in the right. <br />Edit any of the two areas and see the other changing in real time.&nbsp;</p>
+<h4>Use the table below to test most of the features</h4>
+<hr />
+<p>Coming to the iOS app store soon</p>
+<hr />
+<p></p>
